// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render the button with tooltipText correctly 1`] = `
<button
  className="sc-htpNat iBrmZi Button rectangle full only-icon"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
  <div
    className="sc-bdVaJa hgMQWD Badge Button__tooltip-text darkGray xs"
  >
    Testing tooltip text
  </div>
</button>
`;

exports[`Button should render the circle shaped button correctly 1`] = `
<button
  className="sc-htpNat kLxjgM Button circle full only-icon"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the default button correctly 1`] = `
<button
  className="sc-htpNat iBrmZi Button rectangle full only-icon"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the disabled button correctly 1`] = `
<button
  className="sc-htpNat hYbkrh Button rectangle disabled full only-icon"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost and disabled button correctly 1`] = `
<button
  className="sc-htpNat hYbkrh Button rectangle disabled ghost only-icon"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost button correctly 1`] = `
<button
  className="sc-htpNat iBrmZi Button rectangle ghost only-icon"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the textOnly and ghost button correctly 1`] = `
<button
  className="sc-htpNat iBrmZi Button rectangle only-icon textOnly"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;
